fixing login function - removing rtk query in favor of async thunks
