# back-end/public/swagger.json
@@ -6,45 +6,13 @@
 		"requestBodies": {},
 		"responses": {},
 		"schemas": {
-			"SuccessOrError": {
-				"properties": {
-					"success": {
-						"type": "boolean"
-					},
-					"error": {
-						"type": "string"
-					}
-				},
-				"type": "object",
-				"additionalProperties": false
-			},
-			"UserCreationPayload": {
-				"properties": {
-					"userName": {
-						"type": "string"
-					},
-					"email": {
-						"type": "string"
-					},
-					"password": {
-						"type": "string"
-					}
-				},
-				"required": [
-					"userName",
-					"email",
-					"password"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
 			"User": {
 				"properties": {
 					"id": {
 						"type": "number",
 						"format": "double"
 					},
-					"userName": {
+					"username": {
 						"type": "string"
 					},
 					"email": {
@@ -67,12 +35,64 @@
 				},
 				"required": [
 					"id",
-					"userName",
+					"username",
 					"email",
 					"password",
 					"salt",
 					"createdAt",
 					"updatedAt"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"UserMeta": {
+				"properties": {
+					"id": {
+						"type": "number",
+						"format": "double"
+					},
+					"username": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"id",
+					"username"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"SuccessOrError_UserMeta_": {
+				"properties": {
+					"success": {
+						"type": "boolean"
+					},
+					"error": {
+						"type": "string"
+					},
+					"data": {
+						"$ref": "#/components/schemas/UserMeta"
+					}
+				},
+				"type": "object",
+				"additionalProperties": false
+			},
+			"UserCreationPayload": {
+				"properties": {
+					"username": {
+						"type": "string"
+					},
+					"email": {
+						"type": "string"
+					},
+					"password": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"username",
+					"email",
+					"password"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -106,28 +126,26 @@
 	},
 	"openapi": "3.0.0",
 	"paths": {
-		"/user/{user_id}": {
+		"/user/details": {
 			"get": {
 				"operationId": "GetUser",
 				"responses": {
-					"204": {
-						"description": "No content"
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/User"
+								}
+							}
+						}
 					}
 				},
 				"tags": [
 					"User"
 				],
 				"security": [],
-				"parameters": [
-					{
-						"in": "path",
-						"name": "user_id",
-						"required": true,
-						"schema": {
-							"type": "string"
-						}
-					}
-				]
+				"parameters": []
 			}
 		},
 		"/user/register": {
@@ -139,7 +157,7 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/SuccessOrError"
+									"$ref": "#/components/schemas/SuccessOrError_UserMeta_"
 								}
 							}
 						}
