# back-end/src/controllers/user.controller.ts
@@ -1,20 +1,21 @@
-import { Post, Route, Get, Body, Tags } from 'tsoa';
-import { LoginPayload, UserCreationPayload, createUser, login } from '../repositories/user.repo';
-import { SuccessOrError } from '../types';
+import { Post, Route, Get, Body, Tags, Security, Request } from 'tsoa';
+import { LoginPayload, UserCreationPayload, createUser, getUserById, login } from '../repositories/user.repo';
+import { SuccessOrError, UserMeta } from '../types';
 import { User } from '../models';
 
 @Route('user')
 @Tags('User')
 export default class UserController {
-	@Get('{user_id}')
-	public async getUser(user_id: string): Promise<void> {
-		return;
+	@Get('/details')
+	public async getUser(@Request() userId: string): Promise<User | undefined> {
+		const response = await getUserById(Number(userId));
+		return response;
 	}
 
 	@Post('/register')
 	public async createUser(
 		@Body() userCreationParam: UserCreationPayload
-	): Promise<SuccessOrError> {
+	): Promise<SuccessOrError<UserMeta>> {
 		const response = await createUser(userCreationParam);
 		return response;
 	}
